--- a/Experiment/snapsvganimation.html
+++ b/Experiment/snapsvganimation.html
@@ -20,6 +20,36 @@
        -->
       <!-- <svg id="svgout" width="500" height="500"></svg> -->
 
+
+      <svg width="120" height="120"  viewBox="0 0 120 120"
+     xmlns="http://www.w3.org/2000/svg" version="1.1"
+     xmlns:xlink="http://www.w3.org/1999/xlink" >
+
+    <!-- Draw the outline of the motion path in grey, along
+         with 2 small circles at key points -->
+    <path d="M10,110 A120,120 -45 0,1 110 10 A120,120 -45 0,1 10,110"
+          stroke="lightgrey" stroke-width="2" 
+          fill="none" id="theMotionPath"/>
+    <circle cx="10" cy="110" r="3" fill="lightgrey"  />
+    <circle cx="110" cy="10" r="3" fill="lightgrey"  />
+<path id="s32" d="M 0 0 L 141 141 " stroke="blue" style="stroke-opacity: 1;" />
+
+    <!-- Here is a red circle which will be moved along the motion path. -->
+    <circle cx="" cy="" r="5" fill="red">
+
+        <!-- Define the motion path animation -->
+        <animateMotion dur="6s" repeatCount="indefinite">
+           <mpath xlink:href="#theMotionPath"/>
+        </animateMotion>
+    </circle>
+    <circle cx="" cy="" r="5" fill="red">
+        <animateMotion dur="6s" repeatCount="indefinite">
+           <mpath xlink:href="#s32"/>
+        </animateMotion>
+    </circle>
+
+
+</svg>
     </div>
     <script>
 
